--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -14,5 +14,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Install Build uses
+      run: apt install build-essential binutils
+      
     - name: Make
       run: make
