--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install Build uses
-      run: apt install build-essential binutils
+      run: sudo apt install build-essential binutils
       
     - name: Make
       run: make
