--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -19,3 +19,9 @@ jobs:
       
     - name: Start Make
       run: make
+
+    - name: Build artifact
+      run: |
+           mkdir build
+           cp out/lsh build
+           bash -e -c "cd build;tar zcvf lsh-x86_64.tar.gz lsh"
