--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -25,3 +25,9 @@ jobs:
            mkdir build
            cp out/lsh build
            bash -e -c "cd build;tar zcvf lsh-x86_64.tar.gz lsh"
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: LSH x86_64
+        path: build/lsh-x86_64.tar.gz
